<resources>
    <string name="app_name">CYBAVO Wallet Example</string>

    <string name="action_submit">Submit</string>
    <string name="action_done">Done</string>

    <string name="headline_sign_in_social">Sign In\nWith\nSocial Account</string>
    <string name="action_wechat_sign_in">Sign in with WeChat</string>

    <string name="message_setup_pin">Please\nsetup your PIN code</string>
    <string name="message_setup_backup">Setup security questions and answers for PIN restoration</string>
    <string name="action_next">Next</string>
    <string name="label_1">1</string>
    <string name="label_2">2</string>
    <string name="label_3">3</string>
    <string name="hint_answer">Your answer…</string>

    <string name="title_restore_pin">Restore PIN code</string>
    <string name="message_restore">Fill in answers of your security questions to restore your PIN code</string>
    <string name="message_restore_success">Your PIN code has been restored successfully</string>
    <string name="message_incorrect_restore_answers">You have entered wrong security questions\' answers.</string>

    <string name="title_wallet">Wallets</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_create_wallet">Create wallet</string>
    <string name="label_unnamed_wallet">Unnamed wallet</string>
    <string name="action_rename">Rename</string>
    <string name="title_rename_wallet">Rename wallet</string>
    <string name="action_eos_resources">EOS resources</string>

    <string name="title_create_wallet">New wallet</string>
    <string name="title_new_wallet_name">Name this wallet</string>
    <string name="title_new_wallet_account">Account name</string>
    <string name="label_parent">Parent wallet</string>
    <string name="title_input_pin">Input PIN code</string>
    <string name="title_input_new_pin">Input New PIN code</string>
    <string name="action_forgot_pin">Forgot?</string>

    <string name="label_currency">Currency</string>
    <string name="label_pin_code">PIN code</string>

    <string name="action_deposit">Deposit</string>
    <string name="title_deposit">Deposit</string>
    <string name="template_amount">%1$s %2$s</string>
    <string name="label_deposit">Deposit</string>
    <string name="label_withdraw">Withdraw</string>
    <string name="label_loading_more">Loading more…</string>
    <string name="label_no_more">End of history</string>
    <string name="label_all">All</string>
    <string name="label_sent">Sent</string>
    <string name="label_received">Received</string>
    <string name="label_success">Success</string>
    <string name="label_done">Done</string>
    <string name="label_all_time">All time</string>
    <string name="label_today">Today</string>
    <string name="label_yesterday">Yesterday</string>
    <string name="label_platform_fee">Platform Fee</string>
    <string name="label_platform_fee_abbr">(Pl. Fee)</string>
    <string name="label_blockchain_fee">Blockchain Fee</string>

    <string name="title_transaction_detail">Transaction detail</string>
    <string name="label_from">From</string>
    <string name="label_to">To</string>
    <string name="label_txid">TXID</string>
    <string name="label_time">Time</string>
    <string name="label_pending">Pending</string>
    <string name="label_failed">Failed</string>
    <string name="label_confirm_blocks">%d confirmed</string>
    <string name="label_dropped">Dropped</string>
    <string name="label_replaced">Replaced</string>
    <string name="action_explore">Explore</string>
    <string name="action_replace_fee">Speed up</string>
    <string name="action_cancel">Cancel</string>

    <string name="action_withdraw">Withdraw</string>
    <string name="warning_withdraw">Send only %1$s to this deposit address. Sending and other coin or token to the address may result in the loss of your deposit.</string>
    <string name="action_copy_address">Copy address</string>
    <string name="action_save_qr_code">Save QR code</string>

    <string name="message_qr_code_saved">QR code has been saved</string>
    <string name="label_clipboard_address">%1$s wallet address</string>
    <string name="message_address_copied">Address copied</string>

    <string name="title_withdraw">Withdraw</string>
    <string name="label_address">Address</string>
    <string name="label_amount">Amount</string>
    <string name="label_token_id">Token ID</string>
    <string name="label_memo">Memo</string>
    <string name="label_fee">Transaction fee</string>
    <string name="label_description">Description</string>
    <string name="template_quota">%1$s %2$s Daily</string>
    <string name="template_usage">%1$s %2$s Today</string>
    <string name="hint_withdraw_address">Address to deposit…</string>
    <string name="hint_withdraw_amount">Amount to withdraw…</string>
    <string name="hint_withdraw_memo">Memo / dst.tag for this transaction…</string>
    <string name="hint_withdraw_description">Description for this transaction, private to this wallet.</string>
    <string name="action_send">Send</string>
    <string name="action_send_with_token">Send w. token</string>
    <string name="title_confirm_transaction">Confirm transaction</string>
    <string name="label_transaction_amount">Transaction Amount</string>
    <string name="desc_estimate_transaction">(Estimated result)</string>
    <string name="action_confirm">Confirm</string>

    <string name="title_eos_resources">EOS resources</string>
    <string name="title_eos_resources_cpu">CPU</string>
    <string name="title_eos_resources_ram">RAM</string>
    <string name="title_eos_resources_net">NET</string>
    <string name="action_eos_buy_ram">Buy RAM</string>
    <string name="action_eos_sell_ram">Sell RAM</string>
    <string name="action_eos_delegate_cpu">Delegate CPU</string>
    <string name="action_eos_undelegate_cpu">Undelegate CPU</string>
    <string name="action_eos_delegate_net">Delegate NET</string>
    <string name="action_eos_undelegate_net">Undelegate NET</string>
    <string name="label_eos_transaction_type">Transaction</string>
    <string name="label_eos_number_of_bytes">Number of bytes</string>
    <string name="label_eos_receiver">Receiver</string>
    <string name="message_staked_and_refund">%s staked • %s refunding</string>

    <string name="action_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="title_settings_account">Account</string>
    <string name="title_settings_security">Security</string>

    <string name="action_restore_pin">Forgot PIN code</string>
    <string name="desc_restore_pin">Restore your PIN code by answering security questions</string>
    <string name="action_change_pin">Change PIN code</string>
    <string name="desc_change_pin">Change your PIN code to another one</string>
    <string name="title_confirm_sign_out">Sign out</string>
    <string name="message_confirm_sign_out">Are you sure you want to sign out?</string>
    <string name="message_session_expired">Session expired. Please sign in again.</string>

    <string name="title_change_pin">Change PIN code</string>
    <string name="message_change_pin">Please enter current PIN code and the new PIN code</string>
    <string name="label_current_pin_code">Your PIN code</string>
    <string name="label_new_pin_code">New PIN code</string>
    <string name="message_change_pin_success">Your PIN code has been changed successfully</string>
    <string name="hint_input_pin_code">Click to input…</string>

    <string name="message_forgot_answers">I don\'t remember my answers…</string>
    <string name="title_recover_pin">Recover PIN Code</string>

    <string name="message_request_recover">Contact us to start the recovery process</string>
    <string name="action_forgot">Forgot PIN code!</string>
    <string name="message_input_recovery_code">I\'v got the recovery code</string>
    <string name="label_recovery_code">Recovery code</string>
    <string name="message_incorrect_recovery_code">You have entered wrong recovery code.</string>
    <string name="message_recover_pin_success">Your PIN code has been recovered successfully</string>
    <string name="message_recovery_handle_num">Handle number: %d</string>

    <string name="message_renew_session">Restoring session, just a moment…</string>
    <string name="message_renew_session_success">Session restored</string>

    <string name="title_pay">Pay</string>

    <!-- dev -->
    <string name="title_settings_dev">Development</string>
    <string name="desc_endpoint">Wallet service endpoint</string>
    <string name="desc_api_code">Wallet service API code</string>
    <string name="message_change_restart">This changing will take effect the next time you restart the app</string>
    <string name="title_sdk_version">Wallet SDK Version</string>

</resources>
