<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="category_account"
        android:title="@string/title_settings_account">
        <Preference
            android:key="action_account"
            android:title="@string/title_settings_account"
            android:icon="@drawable/ic_account"
            android:widgetLayout="@layout/prefs_account_sign_out" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_security"
        android:title="@string/title_settings_security">
        <Preference
            android:key="action_change_pin"
            android:title="@string/action_change_pin"
            android:summary="@string/desc_change_pin"
            android:icon="@drawable/ic_change_pin"/>
        <Preference
            android:key="action_restore_pin"
            android:title="@string/action_restore_pin"
            android:summary="@string/desc_restore_pin"
            android:icon="@drawable/ic_forgot_pin"/>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>