<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:clickable="true"
    android:focusable="true">

    <include android:id="@+id/appBar"
        layout="@layout/app_bar"/>

    <TextView
        android:id="@+id/message"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacer_xl"
        android:layout_marginStart="@dimen/spacer_m"
        android:layout_marginEnd="@dimen/spacer_m"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="?attr/colorPrimary"
        android:text="@string/message_change_pin"/>

    <TextView
        android:id="@+id/currentPinCodeLabel"
        app:layout_constraintTop_toBottomOf="@+id/message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacer_xl"
        android:layout_marginStart="@dimen/spacer_m"
        android:layout_marginEnd="@dimen/spacer_m"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:text="@string/label_current_pin_code"/>

    <Button
        android:id="@+id/currentPinCode"
        app:layout_constraintTop_toBottomOf="@+id/currentPinCodeLabel"
        android:layout_marginTop="@dimen/spacer_s"
        android:layout_marginStart="@dimen/spacer_m"
        android:layout_marginEnd="@dimen/spacer_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_input_pin_code"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <TextView
        android:id="@+id/newPinCodeLabel"
        app:layout_constraintTop_toBottomOf="@+id/currentPinCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacer_xl"
        android:layout_marginStart="@dimen/spacer_m"
        android:layout_marginEnd="@dimen/spacer_m"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:text="@string/label_new_pin_code"/>

    <Button
        android:id="@+id/newPinCode"
        app:layout_constraintTop_toBottomOf="@+id/newPinCodeLabel"
        android:layout_marginTop="@dimen/spacer_s"
        android:layout_marginStart="@dimen/spacer_m"
        android:layout_marginEnd="@dimen/spacer_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_input_pin_code"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/spacer_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_submit"/>

</androidx.constraintlayout.widget.ConstraintLayout>