<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:clickable="true"
    android:focusable="true">

    <include android:id="@+id/appBar"
        layout="@layout/app_bar"/>

    <TextView
        android:id="@+id/currencyLabel"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        android:layout_marginStart="@dimen/spacer_m"
        android:layout_marginEnd="@dimen/spacer_m"
        android:layout_marginTop="@dimen/spacer_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        android:text="@string/label_currency"/>

    <Spinner
        android:id="@+id/currency"
        app:layout_constraintTop_toBottomOf="@+id/currencyLabel"
        android:layout_marginStart="@dimen/spacer_m"
        android:layout_marginEnd="@dimen/spacer_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/parentLabel"
        app:layout_constraintTop_toBottomOf="@+id/currency"
        android:layout_marginStart="@dimen/spacer_m"
        android:layout_marginEnd="@dimen/spacer_m"
        android:layout_marginTop="@dimen/spacer_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        android:text="@string/label_parent"
        android:visibility="gone"/>

    <Spinner
        android:id="@+id/parent"
        app:layout_constraintTop_toBottomOf="@+id/parentLabel"
        android:layout_marginStart="@dimen/spacer_m"
        android:layout_marginEnd="@dimen/spacer_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/accountWrapper"
        app:layout_constraintTop_toBottomOf="@+id/parent"
        android:layout_marginStart="@dimen/spacer_m"
        android:layout_marginEnd="@dimen/spacer_m"
        android:layout_marginTop="@dimen/spacer_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_new_wallet_account"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameWrapper"
        app:layout_constraintTop_toBottomOf="@+id/accountWrapper"
        android:layout_marginStart="@dimen/spacer_m"
        android:layout_marginEnd="@dimen/spacer_m"
        android:layout_marginTop="@dimen/spacer_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_new_wallet_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacer_m"
        android:text="@string/action_submit"/>

</androidx.constraintlayout.widget.ConstraintLayout>